# pythonTemplate

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt  template.py
.github/workflows/: build.yml  tests.yml
config/: settings.ini
modules/: constants.py  log.py  main.py  messages.py  utils.py
modules/db_conections/: mongo.py
modules/db_conections/mongo/: mongo.py
modules/db_conections/oracle/: oracle_alc.py  oracle_raw.py
modules/db_conections/postgres/: postgres_raw.py
modules/db_conections/sqlite/: sqlite_alc.py  sqlite_raw.py
modules/others/: log2.py  messages_ptBR.py
modules/sftp/: sftp_poll_Batch.py  sftp_poll_noBatch.py
src/: constants.py  messages.py
