[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pythonTemplate"
version = "1.0.0"
description = "pythonTemplate"
authors = ["Daniel Costa <danieldcsta@gmail.com>"]
maintainers = ["Daniel Costa"]
repository = "https://github.com/ddc/pythonTemplate"
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.4"
poethepoet = "^0.26.1"

[tool.poe.tasks]
test = "poetry run coverage run -m pytest -v"
coverage = "poetry run coverage report"
testPublish = "poetry publish -r test-pypi"
_build = "poetry build"
build  = ["test", "_build"]
_publish = "poetry publish"
publish = ["testPublish", "_publish"]
